change: 实现注册登录静态页面

--- a/src/App.less
+++ b/src/App.less
@@ -1,1 +1,35 @@
 @import '~antd/dist/antd.less';
+
+@box-shadow-color: #909090;
+
+
+#sign-page {
+  height: 100vh;
+  width: 100%;
+  
+  margin: 0px;
+  background-image: url("./assets/sign.JPG");
+  background-size: 100% 100%;
+  background-attachment: fixed;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#sign-form {
+  height: 380px;
+  width: 420px;
+  background-color: whitesmoke;
+  box-shadow: 8px 8px 10px @box-shadow-color;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+// #sign-form-label {
+//   height: 13px;
+//   width: auto;
+//   align-self: flex-start;
+// }
