--- a/src/App.less
+++ b/src/App.less
@@ -26,10 +26,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
-// #sign-form-label {
-//   height: 13px;
-//   width: auto;
-//   align-self: flex-start;
-// }
+h2 {
+  color: transparent;
+  background-color : black;
+  text-shadow : rgba(255,255,255,0.5) 0 5px 6px, rgba(255,255,255,0.2) 1px 3px 3px;
+  -webkit-background-clip : text;
+  font-size: 20px;
+  margin-bottom: 30px;
+}
