--- a/src/App.less
+++ b/src/App.less
@@ -8,7 +8,7 @@
   width: 100%;
   
   margin: 0px;
-  background-image: url("./assets/sign.JPG");
+  background-image: url("./assets/sign_background.JPG");
   background-size: 100% 100%;
   background-attachment: fixed;
 
